[gd_scene load_steps=4 format=2]

[ext_resource path="res://Drone/Drone.gd" type="Script" id=1]

[sub_resource type="SphereShape" id=1]
radius = 0.5

[sub_resource type="SphereMesh" id=2]
radius = 0.5
height = 1.0

[node name="Drone" type="KinematicBody" groups=[
"Active Drones",
]]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="Mesh" type="Spatial" parent="."]

[node name="MeshInstance" type="MeshInstance" parent="Mesh"]
mesh = SubResource( 2 )
material/0 = null

[node name="DebugLabel" type="Label" parent="."]
margin_left = 984.0
margin_top = 108.0
margin_right = 1249.0
margin_bottom = 158.0
text = "drone pos is: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DroneUI" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InstructionGraph" type="GraphEdit" parent="DroneUI"]
margin_left = 987.0
margin_top = 190.0
margin_right = 1659.0
margin_bottom = 745.0
scroll_offset = Vector2( -430, -370 )
__meta__ = {
"_edit_use_anchors_": false
}
